ingress/nginx-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ssl
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
  - host: kuber.tasenko.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-ssl
            port:
              name: http
  tls:
  - hosts:
    - kuber.tasenko.ru
    secretName: nginx-ssl
